// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGradientSpec — regression snapshots > blobs @ seed 12 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 414.93731550872326,
        "cy": 242.1360284090042,
        "kind": "radial",
        "r": 538.6295807249845,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1355.5590340867639,
        "cy": 488.8690859079361,
        "kind": "radial",
        "r": 293.913133084774,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1002.2454619780183,
        "cy": 2048.417004197836,
        "kind": "radial",
        "r": 527.6775873228908,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1060.5154691264033,
        "cy": 97.4075473845005,
        "kind": "radial",
        "r": 688.9268963634968,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 470.07491894066334,
        "cy": 1648.9049710333347,
        "kind": "radial",
        "r": 611.8793788477778,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 939.5463130250573,
        "cy": 1700.3770411014557,
        "kind": "radial",
        "r": 632.758516754955,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1436.3685002177954,
        "cy": 771.0957616567612,
        "kind": "radial",
        "r": 419.71068249642843,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1284.1025806590915,
        "cy": 1240.761735290289,
        "kind": "radial",
        "r": 473.2497585229576,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 338.8445829972625,
        "cy": 422.17988073825836,
        "kind": "radial",
        "r": 460.7653085365892,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 78.08202601969242,
        "cy": 870.9055230021477,
        "kind": "radial",
        "r": 416.3956513926387,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 466.64565470069647,
        "cy": 544.1826470196247,
        "kind": "radial",
        "r": 550.1624570153654,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 890.9495626017451,
        "cy": 899.6687397360802,
        "kind": "radial",
        "r": 517.4465864896774,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 497.91175212711096,
        "cy": 785.247029364109,
        "kind": "radial",
        "r": 460.62953970953816,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1084.6013875678182,
        "cy": 546.8262530863285,
        "kind": "radial",
        "r": 294.9184098690749,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > blobs @ seed 42 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 865.5894027650356,
        "cy": 1434.5297887921333,
        "kind": "radial",
        "r": 656.265222787857,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 964.4170196726918,
        "cy": 559.4044759869576,
        "kind": "radial",
        "r": 515.4879782237114,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 393.4483118355274,
        "cy": 1999.1828925907612,
        "kind": "radial",
        "r": 661.8850480690598,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 680.1365593448281,
        "cy": 799.7559495270252,
        "kind": "radial",
        "r": 669.0494160689414,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1073.8620935752988,
        "cy": 982.4048429727554,
        "kind": "radial",
        "r": 373.21365799382323,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 721.0504623502493,
        "cy": 2197.15845733881,
        "kind": "radial",
        "r": 551.7882281206548,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 5.533850826323032,
        "cy": 1506.5021559596062,
        "kind": "radial",
        "r": 649.7297679930925,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 73.74134346842766,
        "cy": 1895.4367697238922,
        "kind": "radial",
        "r": 301.6243968307972,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 384.4166210666299,
        "cy": 197.70045578479767,
        "kind": "radial",
        "r": 368.21765109524137,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1128.3081021532416,
        "cy": 1697.0739401876926,
        "kind": "radial",
        "r": 299.71739922836423,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 249.12753760814667,
        "cy": 2696.602001041174,
        "kind": "radial",
        "r": 498.7036442980171,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1164.993096627295,
        "cy": 1022.2775861620903,
        "kind": "radial",
        "r": 482.35495476052165,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 53.91246758401394,
        "cy": 164.45675045251846,
        "kind": "radial",
        "r": 528.4511046521366,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 859.2904984205961,
        "cy": 784.5589555799961,
        "kind": "radial",
        "r": 566.9399827904999,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > blobs @ seed 77 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 612.8659522533417,
        "cy": 135.10322496294975,
        "kind": "radial",
        "r": 588.674907244742,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 699.6934505179524,
        "cy": 370.44042348861694,
        "kind": "radial",
        "r": 644.8787361681461,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1271.7338363081217,
        "cy": 2508.784482628107,
        "kind": "radial",
        "r": 312.17740104719996,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 260.2755093947053,
        "cy": 2909.5335446298122,
        "kind": "radial",
        "r": 540.252733256668,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 714.1156642511487,
        "cy": 2205.969440191984,
        "kind": "radial",
        "r": 470.3518798537552,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 77.3123762011528,
        "cy": 416.9409938156605,
        "kind": "radial",
        "r": 320.32751033082604,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 599.8807102069259,
        "cy": 1621.0784777998924,
        "kind": "radial",
        "r": 709.8688565008342,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 82.8337886184454,
        "cy": 922.3925434052944,
        "kind": "radial",
        "r": 395.7727518863976,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 195.99407337605953,
        "cy": 665.0856636464596,
        "kind": "radial",
        "r": 382.1787966527045,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 11.891234032809734,
        "cy": 2610.0010603666306,
        "kind": "radial",
        "r": 513.1040186136962,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 685.4920724406838,
        "cy": 1939.3633216619492,
        "kind": "radial",
        "r": 419.2324979044497,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 373.0504294484854,
        "cy": 1913.5578759014606,
        "kind": "radial",
        "r": 407.1466309502721,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1022.0274635776877,
        "cy": 1419.6479424834251,
        "kind": "radial",
        "r": 558.0861001163722,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 847.4185189604759,
        "cy": 1279.0882378816605,
        "kind": "radial",
        "r": 338.2969808578491,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > liquid @ seed 12 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 108.9612127840519,
        "cy": -203.3751229941845,
        "kind": "radial",
        "r": 1425.715967874974,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 219.99108865857124,
        "cy": 957.0393560578425,
        "kind": "radial",
        "r": 1017.8552218079566,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 921.7876518890262,
        "cy": 1254.8303079853454,
        "kind": "radial",
        "r": 1407.4626455381513,
        "stops": [
          {
            "color": "#ff6e7fcc",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 43.83339632302523,
        "cy": 1827.0103127509356,
        "kind": "radial",
        "r": 1676.2114939391613,
        "stops": [
          {
            "color": "#ffd86ecc",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 742.0072369650006,
        "cy": 1966.7166126271086,
        "kind": "radial",
        "r": 1547.7989647462964,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 765.1696684956551,
        "cy": 2813.0308753500385,
        "kind": "radial",
        "r": 1582.597527924925,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 960,
        "kind": "radial",
        "r": 720,
        "stops": [
          {
            "color": "rgba(255,255,255,0.25)",
            "offset": 0,
          },
          {
            "color": "rgba(255,255,255,0)",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > liquid @ seed 42 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 645.53840495646,
        "cy": 97.05960184335709,
        "kind": "radial",
        "r": 1621.775371313095,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 251.7320141941309,
        "cy": 696.2780131151278,
        "kind": "radial",
        "r": 1387.146630372852,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 899.6323016658425,
        "cy": 848.9655412236848,
        "kind": "radial",
        "r": 1631.1417467817664,
        "stops": [
          {
            "color": "#ff6e7fcc",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 359.89017728716135,
        "cy": 1573.424372896552,
        "kind": "radial",
        "r": 1643.0823601149023,
        "stops": [
          {
            "color": "#ffd86ecc",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 442.08217933773994,
        "cy": 2369.2413957168656,
        "kind": "radial",
        "r": 1150.0227633230388,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 988.7213058024645,
        "cy": 2667.3669749001665,
        "kind": "radial",
        "r": 1447.647046867758,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 960,
        "kind": "radial",
        "r": 720,
        "stops": [
          {
            "color": "rgba(255,255,255,0.25)",
            "offset": 0,
          },
          {
            "color": "rgba(255,255,255,0)",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > liquid @ seed 77 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 60.79645123332739,
        "cy": -71.42269849777222,
        "kind": "radial",
        "r": 1509.1248454079032,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 166.69819056987762,
        "cy": 519.7956336786349,
        "kind": "radial",
        "r": 1602.797893613577,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1128.9530171826482,
        "cy": 1434.4892242054143,
        "kind": "radial",
        "r": 1048.295668412,
        "stops": [
          {
            "color": "#ff6e7fcc",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1309.2900950834155,
        "cy": 1293.5170062631369,
        "kind": "radial",
        "r": 1428.4212220944464,
        "stops": [
          {
            "color": "#ffd86ecc",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 992.6862480863929,
        "cy": 2129.410442834099,
        "kind": "radial",
        "r": 1311.9197997562587,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 187.62344721704721,
        "cy": 2238.208250800769,
        "kind": "radial",
        "r": 1061.87918388471,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 960,
        "kind": "radial",
        "r": 720,
        "stops": [
          {
            "color": "rgba(255,255,255,0.25)",
            "offset": 0,
          },
          {
            "color": "rgba(255,255,255,0)",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > mesh @ seed 12 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 317.78244834244254,
        "cy": 208.42720568180084,
        "kind": "radial",
        "r": 1084.4011775124818,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1511.2906977251173,
        "cy": 1057.7738171815872,
        "kind": "radial",
        "r": 798.8986552655698,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 482.22872935384515,
        "cy": 2169.683400839567,
        "kind": "radial",
        "r": 1071.623851876706,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1357.8680439457298,
        "cy": 2579.4815094769,
        "kind": "radial",
        "r": 1259.748045757413,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > mesh @ seed 42 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 443.96503277421,
        "cy": 446.90595775842667,
        "kind": "radial",
        "r": 1221.6427599191666,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1307.8968502297998,
        "cy": 1071.8808951973915,
        "kind": "radial",
        "r": 1057.4026412609965,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 311.7655273139477,
        "cy": 2159.8365785181522,
        "kind": "radial",
        "r": 1228.1992227472365,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1160.0710108593107,
        "cy": 2719.951189905405,
        "kind": "radial",
        "r": 1236.5576520804318,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > mesh @ seed 77 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 373.20246663093565,
        "cy": 187.02064499258995,
        "kind": "radial",
        "r": 1142.7873917855322,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1170.2405942693354,
        "cy": 1034.0880846977234,
        "kind": "radial",
        "r": 1208.3585255295038,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 557.685474166274,
        "cy": 2261.7568965256214,
        "kind": "radial",
        "r": 820.2069678884001,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 941.7432648852468,
        "cy": 3141.9067089259624,
        "kind": "radial",
        "r": 1086.2948554661125,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;
